# wiyci

./: Cargo.toml  README.md
.cargo/: config.toml
.github/: dependabot.yml
.github/workflows/: ci.yml  latest-deps.yml
migrations/: 00000000000001_Init.sql  0001_Init.sql  0002_Add_statistics.up.sql  0003_Add_project_snippet_counts.down.sql  0003_Add_project_snippet_counts.up.sql  0004_Add_versions.up.sql  0005_Add_log_removals.down.sql  0005_Add_log_removals.up.sql
wiyci-common/: Cargo.toml
wiyci-common/src/: api.rs  db.rs  lib.rs  migrations.rs  models.rs
wiyci-common/src/db/: common.rs  fetch_tasks.rs  items.rs  logs.rs  projects.rs  snippets.rs  statistics.rs  versions.rs
wiyci-common/src/models/: fetch_tasks.rs  items.rs  logs.rs  projects.rs  repology.rs  snippets.rs  statistics.rs
wiyci-common/tests/: migrations.rs
wiyci-daemon/: Cargo.toml
wiyci-daemon/src/: config.rs  init.rs  main.rs  storage.rs  util.rs  workers.rs
wiyci-daemon/src/util/: duration.rs
wiyci-daemon/src/workers/: discover.rs  discover_projects.rs  expire_logs.rs  fetch.rs  items.rs  metrics.rs  parse.rs  remove_logs.rs  update.rs  util.rs
wiyci-daemon/src/workers/parse/: snippets.rs
wiyci-daemon/src/workers/update/: tasks.rs
wiyci-daemon/src/workers/update/tasks/: alpine.rs  fedora.rs  freebsd.rs
wiyci-parser/: Cargo.toml
wiyci-parser/src/: lib.rs  lines.rs  matchers.rs  matching.rs  snippets.rs  typed_storage.rs
wiyci-parser/src/matchers/: factory.rs
wiyci-parser/src/matchers/matchers/: ctest_tests.rs  gtest_tests.rs  pytest_tests.rs  warnings.rs
wiyci-parser/src/matching/: captures.rs  common.rs  factory.rs  matchers.rs
wiyci-parser/src/matching/matchers/: c_warnings.rs  ctest_tests.rs  gtest_tests.rs  pytest_tests.rs  rust_warnings.rs  warnings.rs
wiyci-parser/tests/: formats.rs  limits.rs  snippets.rs  tests.rs
wiyci-parser/tests/integration/: features.rs  main.rs  operation.rs  operaton.rs  snippets.rs
wiyci-parser/tests/integration/snippets/: c_warnings.rs  gtest.rs  rust_warnings.rs  warnings.rs
wiyci-parser/tests/snippets/: common.rs  ctest.rs  gtest.rs  main.rs  pytest.rs
wiyci-web/: Cargo.toml
wiyci-web/css/: _helpers.scss  _page.scss  _resets.scss  _theme.scss  main.scss
wiyci-web/css/custom_components/: _logs.scss  _news.scss
wiyci-web/css/generic_components/: _columns.scss  _dl.scss  _footer.scss  _header.scss  _headings.scss  _jumbotron.scss  _navbar.scss  _table.scss  _ul.scss  pre.scss
wiyci-web/css/local_components/: _logs.scss
wiyci-web/src/: config.rs  constants.rs  handlers.rs  init.rs  lib.rs  main.rs  middleware.rs  result.rs  routes.rs  state.rs  static_files.rs
wiyci-web/src/handlers/: about.rs  item.rs  project.rs  projects.rs  root.rs  snippets.rs  static_files.rs
wiyci-web/src/middleware/: headers.rs  metrics.rs
wiyci-web/static/: amdmi3.min.css
wiyci-web/templates/: _base.html  about.html  item.html  project.html  projects.html  root.html  snippets.html
wiyci-web/tests/: integration.rs  snapshot.rs
wiyci-web/tests/integration_tests/: about.rs  item.rs  project.rs  projects.rs  root.rs  static_file.rs
wiyci-web/tests/integration_tests/fixtures/: firefox_project.sql  sample_items.sql
wiyci-web/tests/snapshot_tests/: about.rs  item.rs  project.rs  projects.rs  root.rs
wiyci-web/tests/snapshot_tests/snapshots/: snapshot__snapshot_tests__about__about.snap  snapshot__snapshot_tests__item__item.snap  snapshot__snapshot_tests__item__item_not_found.snap  snapshot__snapshot_tests__project__project_not_found.snap  snapshot__snapshot_tests__project__projects_existing.snap  snapshot__snapshot_tests__projects__projects_empty.snap  snapshot__snapshot_tests__projects__projects_nonempty.snap  snapshot__snapshot_tests__projects__projects_search.snap  snapshot__snapshot_tests__root__root.snap
