[package]
name = "wiyci-common"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true

[lints]
workspace = true

[dependencies]
indoc = "2.0.7"
reqwest-middleware = { version = "0.5.2", features = ["json"] }
serde = { version = "1.0.228", features = ["derive"] }
sqlx = { version = "0.9.0", default-features = false, features = ["macros", "migrate", "postgres", "time"] }
strum = { version = "0.28.0", features = ["derive"] }
time = "0.3.51"
wiyci-parser = { path = "../wiyci-parser" }

[dev-dependencies]
sqlx = { version = "0.9.0", default-features = false, features = ["runtime-tokio"] }
