[package]
name = "wiyci-daemon"
version = "0.1.0"
edition = "2024"

[lints]
workspace = true

[dependencies]
anyhow = "1.0.102"
clap = { version = "4.6.1", features = ["derive"] }
wiyci-common = { path = "../wiyci-common" }
indoc = "2.0.7"
metrics = "0.24.6"
metrics-exporter-prometheus = { version = "0.18.3", features = ["http-listener"] }
metrics-process = { version = "2.4.3", features = ["use-gauge-on-cpu-seconds-total"] }
rand = "0.10.1"
serde = { version = "1.0.228", features = ["derive"] }
sqlx = { version = "0.9.0", features = ["runtime-tokio", "postgres", "time"] }
time = { version = "0.3.51", features = ["local-offset"] }
tokio = { version = "1.52.3", features = ["macros", "rt-multi-thread"] }
toml = { version = "1.1.2", features = ["std", "serde", "parse"] }
tracing = "0.1.44"
tracing-appender = "0.2.5"
tracing-loki = { version = "0.2.7", features = ["compat-0-2-1"] }
tracing-subscriber = { version = "0.3.23", features = ["env-filter", "time"] }
url = { version = "2.5.8", features = ["serde"] }
