[package]
name = "wiyci-daemon"
version = "0.1.0"
edition = "2024"

[lints]
workspace = true

[dependencies]
anyhow = "1.0.102"
clap = { version = "4.6.1", features = ["derive"] }
futures-util = { version = "0.3.32", default-features = false }
http = "1.4.2"
indoc = "2.0.7"
metrics = "0.24.6"
metrics-exporter-prometheus = { version = "0.18.3", features = ["http-listener"] }
metrics-process = { version = "2.4.3", features = ["use-gauge-on-cpu-seconds-total"] }
rand = "0.10.1"
reqwest = { version = "0.13.4", default-features = false, features = ["default-tls", "http2", "json", "stream"] }
reqwest-middleware = "0.5.2"
reqwest-politeness = "0.1.0"
serde = { version = "1.0.228", features = ["derive"] }
sqlx = { version = "0.9.0", features = ["runtime-tokio", "postgres", "time"] }
time = { version = "0.3.51", features = ["local-offset"] }
tokio = { version = "1.52.3", features = ["macros", "rt-multi-thread"] }
tokio-util = { version = "0.7.18", features = ["io"] }
toml = { version = "1.1.2", features = ["std", "serde", "parse"] }
tracing = "0.1.44"
tracing-appender = "0.2.5"
tracing-loki = { version = "0.2.7", features = ["compat-0-2-1"] }
tracing-subscriber = { version = "0.3.23", features = ["env-filter", "time"] }
url = { version = "2.5.8", features = ["serde"] }
wiyci-common = { path = "../wiyci-common" }

[dev-dependencies]
tempfile = "3.27.0"
