[package]
name = "wiyci-parser"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true

[lints]
workspace = true

[dependencies]
memchr = "2.8.2"
paste = "1.0.15"
regex = "1.12.4"
serde = { version = "1.0.228", features = ["derive"] }
strip-ansi-escapes = "0.2.1"
strum = { version = "0.28.0", features = ["derive"] }

[dev-dependencies]
indoc = "2.0.7"
insta = "1.48.0"
itertools = "0.15.0"
