[package]
name = "wiyci-web"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true

[lints]
workspace = true

[dependencies]
anyhow = "1.0.102"
askama = "0.16.0"
axum = { version = "0.8.9", features = ["macros"] }
axum-myroutes = { version = "0.2.2", default-features = false }
cityhasher = "0.1.0"
clap = { version = "4.6.1", features = ["derive"] }
flate2 = "1.1.9"
include_dir = { version = "0.7.4", features = ["glob"] }
indexmap = "2.13.0"
indoc = "2.0.7"
itertools = "0.15.0"
libversion = "0.3.2"
metrics = "0.24.6"
metrics-exporter-prometheus = { version = "0.18.3", default-features = false, features = ["http-listener"] }
metrics-process = { version = "2.4.3", features = ["use-gauge-on-cpu-seconds-total"] }
mime = "0.3.17"
serde = { version = "1.0.228", features = ["derive"] }
sqlx = { version = "0.9.0", features = ["runtime-tokio", "postgres", "time"] }
time = { version = "0.3.51", features = ["formatting", "local-offset"] }
tokio = { version = "1.52.3", features = ["macros", "rt-multi-thread"] }
toml = { version = "1.1.2", default-features = false, features = ["std", "serde", "parse"] }
tower-cookies = "0.11.0"
tracing = "0.1.44"
tracing-appender = "0.2.5"
tracing-loki = { version = "0.2.7", default-features = false, features = ["compat-0-2-1"] }
tracing-subscriber = { version = "0.3.23", features = ["env-filter", "time"] }
url = { version = "2.5.8", features = ["serde"] }
url-escape = "0.1.1"
wiyci-common = { path = "../wiyci-common" }
wiyci-parser = { path = "../wiyci-parser" }

[dev-dependencies]
automod = "1.0.17"
axum-test = "19.0.0"
insta = "1.48.0"
tidier = "0.5.6"
